Added landing page but no responsivenss yet

--- a/index.html
+++ b/index.html
@@ -30,5 +30,23 @@
         </div>
     </header>
     
+    <main>
+        <div class="primary_content">
+            <div id="about">
+                <div class="about_description">
+                    <h1> Hi, I'm Aaron! </h1>
+                    <h2> Frontend Developer </h2>
+                    <p> A Bachelor of Science in Information Technology Graduate. 
+                        I am a self thought programmer when it comes to web development but I can assure you that
+                        I am capable of doing incredible things. 
+                    </p>
+                    <button class="" id="contact_btn"> Contact Me </button>
+                </div>
+                <div class="about_description2">
+                    <div class="about_picture"></div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
