Renamed html tag

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <main>
         <div class="primary_content">
             <div id="about">
-                <div class="about_description2">
+                <div class="about_icon">
                     <div class="about_picture"></div>
                 </div>
                 <div class="about_description">
