--- a/index.html
+++ b/index.html
@@ -96,13 +96,16 @@
 
         <div class="footer_thirddiv">
             <div class="social">
-                <h5> Follow Me </h5>
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-instagram"></i></a>
-                <a href="#"><i class="fa fa-linkedin-square"></i></a>
+                <div class="social_text">
+                    <h5> Follow Me </h5>
+                </div>
+                <div class="social_icon">
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-instagram"></i></a>
+                    <a href="#"><i class="fa fa-linkedin-square"></i></a>
+                </div>
             </div>
-            
             <p class="copyright"> &copy; Copyright All rights reserved. </p>
         </div>
     </footer>
