--- a/index.html
+++ b/index.html
@@ -44,28 +44,50 @@
                         I am a self thought programmer when it comes to web development but I can assure you that
                         I am capable of doing incredible things. 
                     </p>
-                    <button class="" id="contact_btn"> Contact Me </button>
+                    <a href="#contact"><button id="contact_btn"> Contact Me </button></a>
                 </div>
             </div>
         </div>
 
         <div class="secondary_content">
-            <div id="skills">
-                <!--<div class="first_skill">
-                    <div class="icon1"></div>
-                    <h2> HTML & CSS </h2>
-                    <p> The Hypertext Markup Language and Cascading Style Sheets are two of the core technologies for building Web pages. </p>
+            <div class="skills_container">
+                <div class="skills_text"> 
+                    <h1> SKILLS </h1>
                 </div>
-                <div class="second_skill">
-                    <div class="icon2"></div>
-                    <h2> JavaScript </h2>
-                    <p> Javascript is used by programmers across the world to create dynamic and interactive web content like applications and browsers.</p>
-                </div>
-                <div class="third_skill">
-                    <div class="icon3"></div>
-                    <h2> Git </h2>
-                    <p> An open source software for distributed version control: tracking changes in any set of files</p>
-                </div>-->
+                <div id="skills">
+                    <div class="skill_box">
+                        <div class="skill1"></div>
+                        <p> Html </p>
+                    </div>
+                    <div class="skill_box">
+                        <div class="skill2"></div>
+                        <p> css </p>
+                    </div>
+                    <div class="skill_box">
+                        <div class="skill3"></div>
+                        <p> javascript </p>
+                    </div>
+                    <div class="skill_box">
+                        <div class="skill4"></div>
+                        <p> Git </p>
+                    </div>
+                    <div class="skill_box">
+                        <div class="skill5"></div>
+                        <p> sass</p>
+                    </div>
+                    <div class="skill_box">
+                        <div class="skill6"></div>
+                        <p> react </p>
+                    </div>
+                    <div class="skill_box">
+                        <div class="skill7"></div>
+                        <p> firebase </p>
+                    </div>
+                    <div class="skill_box">
+                        <div class="skill8"></div>
+                        <p> figma </p>
+                    </div>
+            </div>
             </div>
 
             <button onclick="topFunction()" id="scrollBtn" title="Go to top">↑</button>
