--- a/index.html
+++ b/index.html
@@ -54,40 +54,16 @@
                 <div class="skills_text"> 
                     <h1> SKILLS </h1>
                 </div>
-                <div id="skills">
-                    <div class="skill_box">
-                        <div class="skill1"></div>
-                        <p> Html </p>
-                    </div>
-                    <div class="skill_box">
-                        <div class="skill2"></div>
-                        <p> css </p>
-                    </div>
-                    <div class="skill_box">
-                        <div class="skill3"></div>
-                        <p> javascript </p>
-                    </div>
-                    <div class="skill_box">
-                        <div class="skill4"></div>
-                        <p> Git </p>
-                    </div>
-                    <div class="skill_box">
-                        <div class="skill5"></div>
-                        <p> sass</p>
-                    </div>
-                    <div class="skill_box">
-                        <div class="skill6"></div>
-                        <p> react </p>
-                    </div>
-                    <div class="skill_box">
-                        <div class="skill7"></div>
-                        <p> firebase </p>
-                    </div>
-                    <div class="skill_box">
-                        <div class="skill8"></div>
-                        <p> figma </p>
-                    </div>
-            </div>
+                    <ul id="skills">
+                        <li class="skill_box"><div class="skill skill1"></div><p>Html</p></li>
+                        <li class="skill_box"><div class="skill skill2"></div><p>CSS</p></li>
+                        <li class="skill_box"><div class="skill skill3"></div><p>JavaScript</p></li>
+                        <li class="skill_box"><div class="skill skill4"></div><p>Git</p></li>
+                        <li class="skill_box"><div class="skill skill5"></div><p>Sass</p></li>
+                        <li class="skill_box"><div class="skill skill6"></div><p>React</p></li>
+                        <li class="skill_box"><div class="skill skill7"></div><p>Firebase</p></li>
+                        <li class="skill_box"><div class="skill skill8"></div><p>Figma</p></li>
+                    </ul>
             </div>
 
             <button onclick="topFunction()" id="scrollBtn" title="Go to top">↑</button>
