--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css'>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="./styles/styles.css">
     <title>Personal Portfolio</title>
 </head>
@@ -22,17 +23,17 @@
         <div class="header_right">
             <div class="header_buttons">
                 <ul>
-                    <li><a href="#about"> About </a></li>
-                    <li><a href="#skills"> Skills </a></li>
-                    <li> <a href="#projects"> Projects </a></li>
-                    <li><a href="#contact"> Contact </a></li>
+                    <li><a href="#primary_content"> About </a></li>
+                    <li><a href="#secondary_content"> Skills </a></li>
+                    <li> <a href="#tertiary_content"> Projects </a></li>
+                    <li><a href="#quaternary_content"> Contact </a></li>
                     </ul>
             </div>
         </div>
     </header>
     
     <main>
-        <div class="primary_content">
+        <div class="primary_content" id="primary_content">
             <div id="about">
                 <div class="about_icon">
                     <div class="about_picture"></div>
@@ -49,7 +50,7 @@
             </div>
         </div>
 
-        <div class="secondary_content">
+        <div class="secondary_content" id="secondary_content">
             <div class="skills_container">
                 <div class="skills_text"> 
                     <h1> SKILLS </h1>
@@ -70,10 +71,43 @@
             <script src="js/scroll.js"></script>
         </div>
 
-        <div class="tertiary_content">
-            <div id="projects"></div>
+        <div class="tertiary_content" id="tertiary_content">
+            <div id="projects">
+                <div class="projects_text">
+                    <h1> PROJECTS </h1>
+                </div>
+
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="project" id="magus">
+                                <h2>Quiz Magus</h2>
+                                <p>A web application that allows educators to conduct learning assessments in a form of games that would test the knowledge of assessment takers and to allow educators to visualize the results and scores gathered from these assessments.</p>
+                            </div>
+                        </div>
+                    <!--<div class="carousel-item">
+                            <div class="project"></div>
+                        </div>
+                    </div>-->
+
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+            <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
         </div>
-        <div class="quaternary_content">
+
+        <div class="quaternary_content" id="quaternary_content">
             <div id="contact">
                 <div class="contact_description">
                     <h2> Get in Touch </h2>
