--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
                                 <p>A web application that allows educators to conduct learning assessments in a form of games that would test the knowledge of assessment takers and to allow educators to visualize the results and scores gathered from these assessments.</p>
                             </div>
                         </div>
-                    <!--<div class="carousel-item">
+                    <div class="carousel-item">
                             <div class="project"></div>
                         </div>
-                    </div>-->
+                    </div>
 
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -106,6 +106,7 @@
             <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
         </div>
+    </div>
 
         <div class="quaternary_content" id="quaternary_content">
             <div id="contact">
