--- a/index.html
+++ b/index.html
@@ -83,15 +83,17 @@
                         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>                    </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <div class="project" id="magus">
-                                <h2>Quiz Magus</h2>
-                                <p>A web application that allows educators to conduct learning assessments in a form of games that would test the knowledge of assessment takers and to allow educators to visualize the results and scores gathered from these assessments.</p>
-                            </div>
+                            <a href="https://quiz-magus-prod.vercel.app/" target="_blank">
+                                <div class="project" id="magus">
+                                    <h2>Quiz Magus</h2>
+                                    <p>A web application that allows educators to conduct learning assessments in a form of games that would test the knowledge of assessment takers and to allow educators to visualize the results and scores gathered from these assessments.</p>
+                                </div>
+                            </a>
                         </div>
-                    <div class="carousel-item">
+                    <!--<div class="carousel-item">
                             <div class="project"></div>
                         </div>
-                    </div>
+                    </div>-->
 
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
