Added Animations on website

--- a/index.html
+++ b/index.html
@@ -40,14 +40,16 @@
                 </div>
                 <div class="about_description">
                     <h1> Hi, I'm Aaron! </h1>
-                    <h2> Frontend Developer </h2>
+                    <h2> And I am a <span class="multiple-text"></span></h2>
                     <p> A Bachelor of Science in Information Technology Graduate. 
                         I am a self thought programmer when it comes to web development but I can assure you that
                         I am capable of doing incredible things. 
                     </p>
-                    <a href="#contact"><button id="contact_btn"> Contact Me </button></a>
+                    <a href=""><button id="resume_btn"> Grab Resume </button></a>
                 </div>
             </div>
+            <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+            <script src="./js/typed.js"></script>
         </div>
 
         <div class="secondary_content" id="secondary_content">
