--- a/index.html
+++ b/index.html
@@ -92,10 +92,13 @@
                                 </div>
                             </a>
                         </div>
-                    <!--<div class="carousel-item">
-                            <div class="project"></div>
+                        <div class="carousel-item">
+                                <div class="project" id="covid_tracker">
+                                    <h2>Covid Tracker</h2>
+                                    <p>A web application that allows educators to conduct learning assessments in a form of games that would test the knowledge of assessment takers and to allow educators to visualize the results and scores gathered from these assessments.</p>
+                                </div>   
                         </div>
-                    </div>-->
+                    </div>
 
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
